Finished. Mai am niste retusuri de facut.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<h2>Despre mine</h2>
 		<table>
 			<tr>
-				<td><img src="imgs/serban_ghita_2013_birou.jpg" width="400" /></td>
+				<td><img src="imgs/serban_ghita_2013_birou.jpg" height="500" /></td>
 				<td style="vertical-align:middle;">
 					<ul  style="font-size:80%;">
 						<li><a href="https://soundcloud.com/serban-ghita">https://soundcloud.com/serban-ghita</a></li>
@@ -65,17 +65,17 @@
 
 	<section>
 		<h2>Despre mine</h2>
-		<img src="imgs/serban_ghita_unknown.jpg" />
+		<img src="imgs/serban_ghita_unknown.jpg" height="500" />
 	</section>
 
 	<section>
 		<h2>Despre mine</h2>
-		<img src="imgs/serban_ghita_2013.jpg" />
+		<img src="imgs/serban_ghita_2013.jpg" height="500" />
 	</section>
 
 	<section>
 		<h2>Despre mine</h2>
-		<img src="imgs/serban_ghita_bb.jpg" />
+		<img src="imgs/serban_ghita_bb.jpg" height="500" />
 	</section>
 
 	<section>
