Update slide-uri 'Avangate Shopping Cart'

--- a/index.html
+++ b/index.html
@@ -609,7 +609,39 @@
 			<h6>Studii de caz</h6>
 			<h2>Avangate Mobile Shopping Cart</h2>
 
-			<p style="margin-top:20px; font-size:80%;">Demo: <a href="#">live test</a></p>
+			<p style="margin-top:20px; font-size:80%;">Demo: <a href="https://secure.avangate.com/order/checkout.php?PRODS=4603574&QTY=1&CART=1&CARD=2&ORDERSTYLE=nLWs5JapnH4=&LAYOUT_TYPE=MOBILE&CLEAN_CART=all&DOTEST=1">live test</a></p>
+		</section>
+
+		<section>
+			<h6>Studii de caz</h6>
+			<h2>Avangate Mobile Shopping Cart</h2>
+
+			<p>A trebuit sa alegem o solutie care sa fie disponibila implicit pentru vizitatori.<br>
+				Solutia trebuia sa fie usor de intretinut si compatibila cu <span class="em2">iOS</span>, <span class="em2">Android OS</span> si <span class="em2">Windows Phone OS</span>.</p>
+
+			<ul>
+				<li class="fragment">Twitter Bootstrap</li>
+				<li class="fragment">jQTouch</li>
+				<li class="fragment">jQuery Mobile</li>
+				<li class="fragment">De la 0</li>
+			</ul>
+
+		</section>
+
+		<section>
+			<img src="imgs/bootstrap.png" />
+			<p style="margin-top:20px; font-size:80%;">.v.2.0 - <a href="http://getbootstrap.com/2.3.2/">http://getbootstrap.com/2.3.2/</a></p>
+			<p style="margin-top:20px; font-size:80%;">v.3.0 - <a href="http://getbootstrap.com/">http://getbootstrap.com</a></p>
+		</section>
+
+		<section>
+			<img src="imgs/jqtouch.png" />
+			<p style="margin-top:20px; font-size:80%;">Beta, acum se numeste jQT - <a href="http://jqtjs.com">http://jqtjs.com</a></p>
+		</section>
+
+		<section>
+			<img src="imgs/jquery-mobile-devices-beta.png" />
+			<p style="margin-top:20px; font-size:80%;">Castigatorul a fost jQuery Mobile - <a href="http://jquerymobile.com/">http://jquerymobile.com</a></p>
 		</section>
 
 		<section data-transition="fade">
