--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
 		<meta charset="utf-8">
 		<title>Prezentare | Avangate Tech Sessions</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 	    <link rel="stylesheet" href="css/reveal.css">
 	    <link rel="stylesheet" href="css/theme/beige.css" id="theme">
 	    <!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+
+		<!--<link rel="stylesheet" href="css/print/pdf.css">-->
 
 		<style type="text/css">
 			.reveal section img { border:none; box-shadow:none; background:none; }
@@ -192,7 +195,7 @@
 		<h6>Termeni noi</h6>
 		<h2>Mobile first</h2>
 
-		<p>Strategie de web design prin care un site, destinat dispozitivelor clasice si mobile, este conceput.</p>
+		<p>Strategie de web design prin care este conceput un site destinat dispozitivelor clasice si mobile.</p>
 
 		<p style="margin-top:20px; font-size:80%;">De citit: <a href="https://speakerdeck.com/mdo/desktop-first-to-mobile-first-with-bootstrap">Desktop-first to Mobile-first with Bootstrap</a> - Mark Otto</p>
 	</section>
@@ -201,7 +204,7 @@
 		<h6>Termeni noi</h6>
 		<h2>Polyfills</h2>
 
-		<p>Un cod (de regula JavaScript) ce suplineste o functionalitate ce nu este disponibila in browser-ul vizitatorului.</p>
+		<p>Un cod (de regula JavaScript) ce suplineste o functionalitate indisponibila in browser-ul vizitatorului.</p>
 		<p>A nu se confunda cu <span class="em2">widgets</span>, care de fapt adauga functionalitati noi.</p>
 
 		<p style="margin-top:20px; font-size:80%;">
@@ -751,7 +754,13 @@
 		<h6>Studii de caz</h6>
 		<h2>Joc multiplayer</h2>
 
-		<p>Dezvoltat de mine seara tarziu.</p>
+		<ul style="margin-top:20px; font-size:80%;">
+			<li class="fragment">Joculet facut seara tarziu.</li>
+			<li class="fragment">Introduceti-va numele (cat mai unic).</li>
+			<li class="fragment">Intrati de pe laptop-uri,tablete,smartphones.</li>
+			<li class="fragment">Tastatura sau device orientation.</li>
+			<li class="fragment"><a href="http://game.ghita.org">game.ghita.org</a></li>
+		</ul>
 
 	</section>
 
